<resources>
    <string name="app_name">美团Demo</string>
    <string name="is_develop">是否为测试环境</string>
    <string name="user_token">UserToken</string>
    <string name="tip_input_user_token">请输入登录所需UserToken</string>
    <string name="button_login">登录</string>
    <string name="use_default_user_token">使用默认UserToken</string>
    <string name="call_adult_doctor">呼叫成人医生</string>
    <string name="call_child_doctor">呼叫儿童医生</string>
    <string name="tip_input_call_user_token">请输入呼叫指定UserToken</string>
    <string name="button_call_user_token">开始呼叫</string>
    <string name="button_direct_call">直接呼叫</string>
    <string name="button_send_message">发送消息</string>
    <string name="label_tip_ext">呼叫附加参数</string>
    <string name="hint_ext">请输入附加参数</string>
    <string name="button_set_ext">设置呼叫附加参数</string>
    <string name="button_get_medic_url">获取病历地址</string>
    <string name="hint_medic_id">请输入指定的MedicID</string>
    <string name="hint_forward_user_token">请输入指定userToken</string>
</resources>